--- a/portfolio.html
+++ b/portfolio.html
@@ -27,16 +27,14 @@
             >Web<span class="header-logo-part2">Studio</span></a
           >
           <ul class="header-list list">
-            <li>
-              <a class="header-list-item header-link link" href="./index.html">Студия</a>
+            <li class="header-list-item">
+              <a class="header-link link" href="./index.html">Студия</a>
             </li>
-            <li>
-              <a class="header-list-item header-link link-portfolio-cl link" href="./portfolio.html"
-                >Портфолио</a
-              >
+            <li class="header-list-item">
+              <a class="header-link link-portfolio-cl link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li>
-              <a class="header-list-item header-link link" href="">Контакты</a>
+            <li class="header-list-item">
+              <a class="header-link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -61,111 +59,109 @@
         <div class="container portfolio-container">
           <h1 hidden>Портфолио</h1>
           <!-- Section filter -->
-            <ul class="filter-list list">
-              <li class="filter-list-item">
-                <button class="filter-btn btn-all" type="button">Все</button>
-              </li>
-              <li class="filter-list-item">
-                <button class="filter-btn" type="button">Веб-сайты</button>
-              </li>
-              <li class="filter-list-item">
-                <button class="filter-btn" type="button">Приложения</button>
-              </li>
-              <li class="filter-list-item">
-                <button class="filter-btn" type="button">Дизайн</button>
-              </li>
-              <li class="filter-list-item">
-                <button class="filter-btn" type="button">Маркетинг</button>
-              </li>
-            </ul>
-          </div>
-      </section>
-          <!-- Section Projects -->
-      <section class="projects">
+          <ul class="filter-list list">
+            <li class="filter-list-item">
+              <button class="filter-btn btn-all" type="button">Все</button>
+            </li>
+            <li class="filter-list-item">
+              <button class="filter-btn" type="button">Веб-сайты</button>
+            </li>
+            <li class="filter-list-item">
+              <button class="filter-btn" type="button">Приложения</button>
+            </li>
+            <li class="filter-list-item">
+              <button class="filter-btn" type="button">Дизайн</button>
+            </li>
+            <li class="filter-list-item">
+              <button class="filter-btn" type="button">Маркетинг</button>
+            </li>
+          </ul>
+        </div>
+        <!-- Section Projects -->
         <div class="container projects-container">
-            <ul class="projects-list list">
-              <li class="projects-list-items">
-                <a class="project-link link" href="">
-                  <img src="./images/portfolio-page/project1.jpg" alt="" width="370" height="294" />
-                  <div class="projects-item-bottom">
+          <ul class="projects-list list">
+            <li class="projects-list-items">
+              <a class="project-link link" href="">
+                <img src="./images/portfolio-page/project1.jpg" alt="" width="370" height="294" />
+                <div class="projects-item-bottom">
                   <h3 class="projects-title">Технокряк</h3>
                   <p class="projects-category">Веб-сайт</p>
-                  </div>
-                </a>
-              </li>
-              <li class="projects-list-items">
-                <a class="project-link link" href="">
-                  <img src="./images/portfolio-page/project2.jpg" alt="" width="370" height="294" />
-                  <div class="projects-item-bottom">
+                </div>
+              </a>
+            </li>
+            <li class="projects-list-items">
+              <a class="project-link link" href="">
+                <img src="./images/portfolio-page/project2.jpg" alt="" width="370" height="294" />
+                <div class="projects-item-bottom">
                   <h3 class="projects-title">Постер New Orlean vs Golden Star</h3>
                   <p class="projects-category">Дизайн</p>
-                  </div>
-                </a>
-              </li>
-              <li class="projects-list-items">
-                <a class="project-link link" href="">
-                  <img src="./images/portfolio-page/project3.jpg" alt="" width="370" height="294" />
-                  <div class="projects-item-bottom">
+                </div>
+              </a>
+            </li>
+            <li class="projects-list-items">
+              <a class="project-link link" href="">
+                <img src="./images/portfolio-page/project3.jpg" alt="" width="370" height="294" />
+                <div class="projects-item-bottom">
                   <h3 class="projects-title">Ресторан Seafood</h3>
                   <p class="projects-category">Приложение</p>
-                  </div>
-                </a>
-              </li>
-              <li class="projects-list-items">
-                <a class="project-link link" href="">
-                  <img src="./images/portfolio-page/project4.jpg" alt="" width="370" height="294" />
-                  <div class="projects-item-bottom">
+                </div>
+              </a>
+            </li>
+            <li class="projects-list-items">
+              <a class="project-link link" href="">
+                <img src="./images/portfolio-page/project4.jpg" alt="" width="370" height="294" />
+                <div class="projects-item-bottom">
                   <h3 class="projects-title">Проект Prime</h3>
                   <p class="projects-category">Маркетинг</p>
-                  </div>
-                </a>
-              </li>
-              <li class="projects-list-items">
-                <a class="project-link link" href="">
-                  <img src="./images/portfolio-page/project5.jpg" alt="" width="370" height="294" />
-                  <div class="projects-item-bottom">
+                </div>
+              </a>
+            </li>
+            <li class="projects-list-items">
+              <a class="project-link link" href="">
+                <img src="./images/portfolio-page/project5.jpg" alt="" width="370" height="294" />
+                <div class="projects-item-bottom">
                   <h3 class="projects-title">Проект Boxes</h3>
                   <p class="projects-category">Приложение</p>
-                  </div>
-                </a>
-              </li>
-              <li class="projects-list-items">
-                <a class="project-link link" href="">
-                  <img src="./images/portfolio-page/project6.jpg" alt="" width="370" height="294" />
-                  <div class="projects-item-bottom">
+                </div>
+              </a>
+            </li>
+            <li class="projects-list-items">
+              <a class="project-link link" href="">
+                <img src="./images/portfolio-page/project6.jpg" alt="" width="370" height="294" />
+                <div class="projects-item-bottom">
                   <h3 class="projects-title">Inspiration has no Borders</h3>
                   <p class="projects-category">Веб-сайт</p>
-                  </div>
-                </a>
-              </li>
-              <li class="projects-list-items">
-                <a class="project-link link" href="">
-                  <img src="./images/portfolio-page/project7.jpg" alt="" width="370" height="294" />
-                  <div class="projects-item-bottom">
+                </div>
+              </a>
+            </li>
+            <li class="projects-list-items">
+              <a class="project-link link" href="">
+                <img src="./images/portfolio-page/project7.jpg" alt="" width="370" height="294" />
+                <div class="projects-item-bottom">
                   <h3 class="projects-title">Издание Limited Edition</h3>
                   <p class="projects-category">Дизайн</p>
-                  </div>
-                </a>
-              </li>
-              <li class="projects-list-items">
-                <a class="project-link link" href="">
-                  <img src="./images/portfolio-page/project8.jpg" alt="" width="370" height="294" />
-                  <div class="projects-item-bottom">
+                </div>
+              </a>
+            </li>
+            <li class="projects-list-items">
+              <a class="project-link link" href="">
+                <img src="./images/portfolio-page/project8.jpg" alt="" width="370" height="294" />
+                <div class="projects-item-bottom">
                   <h3 class="projects-title">Проект LAB</h3>
                   <p class="projects-category">Маркетинг</p>
-                  </div>
-                </a>
-              </li>
-              <li class="projects-list-items">
-                <a class="project-link link" href="">
-                  <img src="./images/portfolio-page/project9.jpg" alt="" width="370" height="294" />
-                  <div class="projects-item-bottom">
+                </div>
+              </a>
+            </li>
+            <li class="projects-list-items">
+              <a class="project-link link" href="">
+                <img src="./images/portfolio-page/project9.jpg" alt="" width="370" height="294" />
+                <div class="projects-item-bottom">
                   <h3 class="projects-title">Growing Business</h3>
                   <p class="projects-category">Приложение</p>
-                  </div>
-                </a>
-              </li>
-            </ul>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
