--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
             >Web<span class="header-logo-part2">Studio</span></a
           >
           <ul class="header-list list">
-            <li>
-              <a class="header-list-item header-link link-studio-cl link" href="./index.html"
-                >Студия</a
-              >
+            <li class="header-list-item">
+              <a class="header-link link-studio-cl link" href="./index.html">Студия</a>
             </li>
-            <li>
-              <a class="header-list-item header-link link" href="./portfolio.html">Портфолио</a>
+            <li class="header-list-item">
+              <a class="header-link link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li>
-              <a class="header-list-item header-link link" href="">Контакты</a>
+            <li class="header-list-item">
+              <a class="header-link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -55,17 +53,17 @@
           </ul>
         </div>
       </div>
-      <!-- Секція Шапка -->
+    </header>
+
+    <!-- Секція Основна -->
+    <main>
+      <!-- Секція Заголовок -->
       <section class="header-main">
         <div class="container header-main-container">
           <h1 class="header-txt">Эффективные решения для вашего бизнеса</h1>
           <button class="header-btn" type="button">Заказать услугу</button>
         </div>
       </section>
-    </header>
-
-    <!-- Секція Основна -->
-    <main>
       <!-- Секція Особливості -->
       <section class="features">
         <div class="container features-container">
@@ -193,10 +191,14 @@
               >
             </li>
             <li>
-              <a class="footer-list-item footer-contacts link" href="mailto:info@example.com">info@example.com</a>
+              <a class="footer-list-item footer-contacts link" href="mailto:info@example.com"
+                >info@example.com</a
+              >
             </li>
             <li>
-              <a class="footer-list-item footer-contacts link" href="tel:+380991111111">+38 099 111 11 11</a>
+              <a class="footer-list-item footer-contacts link" href="tel:+380991111111"
+                >+38 099 111 11 11</a
+              >
             </li>
           </ul>
         </address>
